<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Activity labels -->
    <string name="app_name">Product Lister</string>
	<string name="product_search">Search Product</string>
	<string name="product_add_price1">Add Price 1/3</string>
	<string name="product_add_price2">Add Price 2/3</string>
	<string name="product_add_price3">Add Price 3/3</string>
	<string name="product_add">Add Product</string>
	
    <string name="action_settings">Settings</string>
	
	<!-- MainActivity -->
	<string name="main_search_button">Search Products</string>
	
	<!-- Product Search -->
	<string name="product_search_search">Search</string>
	<string name="product_search_add_product">Add Product</string>
	<string name="add_shop">Add Shop</string>
	<string name="product_search_hint">Name of the product you are looking for</string>
	
	<!-- Product Add -->
	<string name="product_add_take_picture_button">Take Picture</string>
	<string name="product_add_name_view">Product Name</string>
	<string name="product_add_add_button">Add Product</string>
	<string name="product_name_hint">Name of the product you are adding</string>
	
	<!-- Product Add Price -->
	<string name="select_product">Select Product</string>
	<string name="product_add_price_product_hint">Look for the product to add the price to</string>
	<string name="price_add_search">Search</string>
	<string name="next_step">Next Step</string>
	
	<string name="product_add_price_product">Selected Product:</string>
	<string name="product_add_price_shop">Selected Shop:</string>
	<string name="unit_price">Unit Price</string>
	<string name="quantity_price">Quantity Price</string>
	<string name="product_add_price_unit_hint">Unit price of selected product</string>
	<string name="product_add_price_quantity_hint">Selected products kg/liter price</string>
	<string name="add_price">Add Price</string>
	<string name="shop_name">Shop Name</string>
	<string name="shop_address">Shop Address</string>
	<string name="shop_location">Shop Location</string>
	<string name="get_from_map">Get From Map</string>
	<string name="search_shop">Search for a shop</string>
	<string name="product_prices">Product Prices</string>
	<string name="product_product">Product:</string>
	<string name="product_image">Product Image</string>
</resources>
