<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent" >

	<TextView
		android:id="@+id/label_select_product"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:text="@string/select_product" />

	<Spinner
		android:id="@+id/price_add_category"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/label_select_product" />

	<Spinner
		android:id="@+id/price_add_subcategory"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/price_add_category" />

	<EditText
		android:id="@+id/price_add_name_text"
		android:hint="@string/product_add_price_product_hint"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/price_add_subcategory"
		android:ems="10" />
	
	<Button
		android:id="@+id/price_step_1_search"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignBaseline="@+id/price_add_name_text"
		android:layout_alignBottom="@+id/price_add_name_text"
		android:layout_toLeftOf="@+id/price_add_name_text"
		android:text="@string/price_add_search" />
	
		<Button
		android:id="@+id/price_next_step_1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:text="@string/next_step" />
	
	<ListView
		android:id="@+id/price_add_product_list"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/price_add_name_text"
		android:layout_above="@+id/price_next_step_1"
		android:layout_marginTop="20dp" >
	</ListView>



</RelativeLayout>
