<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent" >

	<Button
		android:id="@+id/price_next_step_2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:text="@string/next_step" />
	<Button
		android:id="@+id/price_step_2_search"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignBaseline="@+id/searchShop2"
		android:layout_alignBottom="@+id/searchShop2"
		android:layout_toLeftOf="@+id/searchShop2"
		android:text="@string/price_add_search" />
	<ListView
		android:id="@+id/shopList"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/searchShop2"
		android:layout_above="@+id/price_next_step_2"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="5dp" >
	</ListView>

	<EditText
	    android:id="@+id/searchShop2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:ems="10"
	    android:hint="@string/search_shop" >

	    <requestFocus />
	</EditText>

</RelativeLayout>
