<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

		
    <Button
        android:id="@+id/product_prices_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/add_price" />



    <TextView
        android:id="@+id/selected_product_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/product_product" />
	<ImageView
		android:id="@+id/productImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:contentDescription="@string/product_image"
        android:layout_below="@+id/selected_product_text" />
    <ListView
        android:id="@+id/product_prices_list"
        android:layout_below="@+id/productImageView"
        android:layout_above="@+id/product_prices_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >

    </ListView>

    <TextView
        android:id="@+id/productPricesSearched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/productImageView"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/selected_product_text" />

</RelativeLayout>