<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/product_search_textfield"
        android:hint="@string/product_search_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/product_search_search"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/product_search_search"
        android:ems="10" >

    </EditText>

    <Button
        android:id="@+id/product_search_search"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/product_search_search" />
    
	<ListView
        android:id="@+id/product_search_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/product_search_add_product"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/product_search_search" >

    </ListView>

    <Button
        android:id="@+id/product_search_add_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/product_search_add_product" />

    <Button
        android:id="@+id/product_search_add_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/product_search_add_shop" />


</RelativeLayout>
