<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- SurfaceView no tested, after testing will know if it is what we want -->

    <SurfaceView
        android:id="@+id/surfaceView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

        <Spinner
        android:id="@+id/product_add_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/product_add_addbutton"
        android:layout_alignParentLeft="true" />
    
    
    <Spinner
        android:id="@+id/product_add_subcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner1"
        android:layout_alignParentLeft="true" />
    
    
    
    <Button
        android:id="@+id/product_add_addbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/product_add_add_button" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner2"
        android:layout_alignParentLeft="true"
        android:text="@string/product_add_name_view" />

    <EditText
        android:id="@+id/product_add_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10" />

    <Button
        android:id="@+id/take_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/product_add_addbutton"
        android:layout_below="@+id/surfaceView1"
        android:text="@string/product_add_take_picture_button" />

</RelativeLayout>